--- a/INSTALL
+++ b/INSTALL
@@ -51,9 +51,8 @@ http://www.lothar.com/tech/crypto/
 
 S/Key Libraries:
 
-If you wish to use --with-skey then you will need the above library
-installed.  No other current S/Key library is currently known to be
-supported.
+If you wish to use --with-skey then you will need the library below
+installed.  No other S/Key library is currently known to be supported.
 
 http://www.sparc.spb.su/solaris/skey/
 
