--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20050423
+ - (tim) [config.guess] Add support for OpenServer 6.
+
 20050421
  - (dtucker) [session.c] Bug #1024: Don't check pam_session_is_open if
    UseLogin is set as PAM is not used to establish credentials in that
