--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20050425
+ - (dtucker) [regress/multiplex.sh] Use "kill -0 $pid" to check for the
+   existence of a process since it's more portable.  Found by jbasney at
+   ncsa.uiuc.edu; ok tim@
+
 20050424
  - (dtucker) [INSTALL configure.ac] Make zlib version check test for 1.1.4 or
    1.2.1.2 or higher.  With tim@, ok djm@
