--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,7 @@
  - (dtucker) [regress/multiplex.sh] Remove cleanup call since test-exec.sh
    will clean up anyway.  From tim@
  - (dtucker) [regress/multiplex.sh] Put control socket in /tmp so running
-   "make tests" works even if you'r building on a filesystem that doesn't
+   "make tests" works even if you're building on a filesystem that doesn't
    support sockets.  From deengert at anl.gov, ok djm@
 
 20050424
