--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050504
+ - (djm) [ssh.c] some systems return EADDRINUSE on a bind to an already-used
+   unix domain socket, so catch that too; from jakob@ ok dtucker@
+
 20050503
  - (dtucker) [canohost.c] normalise socket addresses returned by
    get_remote_hostname().  This means that IPv4 addresses in log messages
