20050512  - (tim) [buildpkg.sh.in] missing ${PKG_INSTALL_ROOT} in init script    hard link section. Bug 1038.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050512
+ - (tim) [buildpkg.sh.in] missing ${PKG_INSTALL_ROOT} in init script
+   hard link section. Bug 1038.
+
 20050509
  - (dtucker) [contrib/cygwin/ssh-host-config] Add a test and warning for a
    user-mode mounts in Cygwin installation.  Patch from vinschen at redhat.com.
