--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 20050512
+ - (djm) [openbsd-compat/readpassphrase.c] bz #950: Retry tcsetattr to ensure
+   terminal modes are reset correctly. Fix from peak AT argo.troja.mff.cuni.cz;
+   "looks ok" dtucker@
+
+20050512
  - (tim) [buildpkg.sh.in] missing ${PKG_INSTALL_ROOT} in init script
    hard link section. Bug 1038.
 
