- (djm) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec]          [contrib/suse/openssh.spec] Update spec file versions to 4.1p1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-20050512
+20050524
+ - (djm) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec]
+         [contrib/suse/openssh.spec] Update spec file versions to 4.1p1
+
+20050524
  - (djm) [openbsd-compat/readpassphrase.c] bz #950: Retry tcsetattr to ensure
    terminal modes are reset correctly. Fix from peak AT argo.troja.mff.cuni.cz;
    "looks ok" dtucker@
