- (dtucker) [configure.ac] strsep() may be defined in string.h, so check    for its presence and include it in the strsep check.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20050528
  - (dtucker) [configure.ac] For AC_CHECK_HEADERS() and AC_CHECK_FUNCS() have
    one entry per line to make it easier to merge changes.  ok djm@
+ - (dtucker) [configure.ac] strsep() may be defined in string.h, so check
+   for its presence and include it in the strsep check.
 
 20050527
  - (djm) [defines.h] Use our realpath if we have to define PATH_MAX, spotted by
