--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    one entry per line to make it easier to merge changes.  ok djm@
  - (dtucker) [configure.ac] strsep() may be defined in string.h, so check
    for its presence and include it in the strsep check.
+ - (dtucker) [configure.ac] getpgrp may be defined in unistd.h, so check for
+   its presence before doing AC_FUNC_GETPGRP.
 
 20050527
  - (djm) [defines.h] Use our realpath if we have to define PATH_MAX, spotted by
