--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
    for its presence and include it in the strsep check.
  - (dtucker) [configure.ac] getpgrp may be defined in unistd.h, so check for
    its presence before doing AC_FUNC_GETPGRP.
+ - (dtucker) [configure.ac] Merge HP-UX blocks into a common block with minor
+   version-specific variations as required.
 
 20050527
  - (djm) [defines.h] Use our realpath if we have to define PATH_MAX, spotted by
