--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+20050531
+ - (dtucker) [contrib/aix/pam.conf] Correct comments.  From davidl at
+   vintela.com.
+
+20050530
+ - (dtucker) [README] Link to new release notes.  Beter late than never...
+
 20050529
  - (dtucker) [openbsd-compat/port-aix.c] Bug #1046: AIX 5.3 expects the
    argument to passwdexpired to be initialized to NULL.  Suggested by tim@
