--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050601
+ - (dtucker) [configure.ac] Look for _getshort and _getlong in
+   arpa/nameser.h.
+
 20050531
  - (dtucker) [contrib/aix/pam.conf] Correct comments.  From davidl at
    vintela.com.
