--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 20050601
  - (dtucker) [configure.ac] Look for _getshort and _getlong in
    arpa/nameser.h.
+ - (dtucker) [configure.ac openbsd-compat/Makefile.in openbsd-compat/strtoll.c]
+   Add strtoll to the compat library, from OpenBSD.
+
 
 20050531
  - (dtucker) [contrib/aix/pam.conf] Correct comments.  From davidl at
