--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
      [ssh.c]
      fix -O for cases where no ControlPath has been specified or socket at
      ControlPath is not contactable; spotted by and ok avsm@
+ - (tim) [config.guess config.sub] Update to '2005-05-27' version.
 
 20050531
  - (dtucker) [contrib/aix/pam.conf] Correct comments.  From davidl at
