--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
      fix -O for cases where no ControlPath has been specified or socket at
      ControlPath is not contactable; spotted by and ok avsm@
  - (tim) [config.guess config.sub] Update to '2005-05-27' version.
+ - (tim) [configure.ac] set TEST_SHELL for OpenServer 6
 
 20050531
  - (dtucker) [contrib/aix/pam.conf] Correct comments.  From davidl at
