--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+20050602
+ - (tim) [configure.ac] Some platforms need sys/types.h for arpa/nameser.h.
+   Take AC_CHECK_HEADERS test out of ultrix section. It caused other platforms
+   to skip builtin standard includes tests. (first AC_CHECK_HEADERS test
+   must be run on all platforms) Add missing ;; to case statement. OK dtucker@
+
 20050601
  - (dtucker) [configure.ac] Look for _getshort and _getlong in
    arpa/nameser.h.
