--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    defined, and check that it helps before keeping it in CFLAGS.  Some old
    gcc's don't set an error code when encountering an unknown value in -std.
    Found and tested by tim@.
+ - (dtucker) [configure.ac] Point configure's reporting address at the
+   openssh-unix-dev list.  ok tim@ djm@
 
 20050602
  - (tim) [configure.ac] Some platforms need sys/types.h for arpa/nameser.h.
