--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 20050609
  - (dtucker) [cipher.c openbsd-compat/Makefile.in
-   openbsd-compat/openbsd-compat.{c,h} openbsd-compat/openssl-compat.h]
+   openbsd-compat/openbsd-compat.h openbsd-compat/openssl-compat.{c,h}]
    Move compatibility code for supporting older OpenSSL versions to the
    compat layer.  Suggested by and "no objection" djm@
 
