--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,10 @@
      make this -Wsign-compare clean; ok avsm@ markus@
      NB. auth1.c changes not committed yet (conflicts with uncommitted sync)
      NB2. more work may be needed to make portable Wsign-compare clean
+ - (dtucker) [cipher.c openbsd-compat/openbsd-compat.h
+   openbsd-compat/openssl-compat.c] only include openssl compat stuff where
+   it's needed as it can cause conflicts elsewhere (eg xcrypt.c).  Found by
+   and ok tim@
 
 20050616
  - (djm) OpenBSD CVS Sync
