--- a/ChangeLog
+++ b/ChangeLog
@@ -9,7 +9,8 @@
      allow ControlPath=none, patch from dwmw2 AT infradead.org; ok dtucker@
    - djm@cvs.openbsd.org 2005/06/25 22:47:49
      [ssh.c]
-     do the default port filling code a few lines earlier, so it really does fix %p
+     do the default port filling code a few lines earlier, so it really 
+     does fix %p
 
 20050618
  - (djm) OpenBSD CVS Sync
