--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
      [auth1.c channels.c cipher.c clientloop.c kex.c session.c ssh.c]
      [sshconnect.c]
      spacing
+ - (djm) [acss.c auth-pam.c auth-shadow.c auth-skey.c auth1.c canohost.c]
+   [cipher-acss.c loginrec.c ssh-rand-helper.c sshd.c] Fix whitespace at EOL 
+   in portable too ("perl -p -i -e 's/\s+$/\n/' *.[ch]")
 
 20050716
  - (dtucker) [auth-pam.c] Ensure that only one side of the authentication
