--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20050725
+ - (dtucker) [configure.ac] Update zlib version check for CAN-2005-2096.
+
 20050717
 - OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2005/07/16 01:35:24
