--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050726
+ - (dtucker) [configure.ac] Update zlib warning message too, pointed out by
+   tim@.
+
 20050725
  - (dtucker) [configure.ac] Update zlib version check for CAN-2005-2096.
 
