- (dtucker) [configure.ac] Enable -Wuninitialized by default when compiling    with gcc.  ok djm@

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    - dtucker@cvs.openbsd.org 2005/07/27 10:39:03
      [scp.c hostfile.c sftp-client.c]
      Silence bogus -Wuninitialized warnings; ok djm@
+ - (dtucker) [configure.ac] Enable -Wuninitialized by default when compiling
+   with gcc.  ok djm@
 
 20050726
  - (dtucker) [configure.ac] Update zlib warning message too, pointed out by
