--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
  - (dtucker) [openbsd-compat/fake-rfc2553.h] Check for EAI_* defines
    individually and use a value less likely to collide with real values from
    netdb.h.  Fixes compile warnings on FreeBSD 5.3.  ok djm@
+ - (dtucker) [openbsd-compat/fake-rfc2553.h] MAX_INT -> INT_MAX since the
+   latter is specified in the standard.
 
 20050802
  - (dtucker) OpenBSD CVS Sync
