--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 20050810
  - (dtucker) [configure.ac] Test libedit library and headers for compatibility.
    Report from skeleten AT shillest.net, ok djm@
+ - (dtucker) [LICENCE configure.ac defines.h openbsd-compat/realpath.c]
+   Sync current (thread-safe) version of realpath.c from OpenBSD (which is
+   in turn based on FreeBSD's).  ok djm@
 
 20050809
  - (tim) [configure.ac] Allow --with-audit=no. OK dtucker@
