--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20050823
+ - (dtucker) [regress/test-exec.sh] Do not prepend an extra "/" to a fully-
+   qualified sshd pathname since some systems (eg Cygwin) may consider "/foo"
+   and "//foo" to be different.  Spotted by vinschen at redhat.com.
+
 20050821
  - (dtucker) [configure.ac defines.h includes.h sftp.c] Add support for
    LynxOS, patch from Olli Savia (ops at iki.fi).  ok djm@
