--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+20050826
+ - (tim) [CREDITS LICENCE auth.c configure.ac defines.h includes.h session.c
+   openbsd-compat/Makefile.in openbsd-compat/openbsd-compat.h
+   openbsd-compat/xcrypt.c] New files [openssh/openbsd-compat/port-uw.c
+   openssh/openbsd-compat/port-uw.h] Support long passwords (> 8-char)
+   on UnixWare 7 from Dhiraj Gulati and Ahsan Rashid. Cleanup and testing
+   by tim@. Feedback and OK dtucker@
+
 20050823
  - (dtucker) [regress/test-exec.sh] Do not prepend an extra "/" to a fully-
    qualified sshd pathname since some systems (eg Cygwin) may consider "/foo"
