--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20050830
+ - (tim) [configure.ac] Back out last change. It needs to be done differently.
+
 20050829
  - (tim) [configure.ac] ia_openinfo() seems broken on OSR6. Limit UW long
    password support to 7.x for now.
