- (djm) Update RPM spec file versions

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20050901
+ - (djm) Update RPM spec file versions
+
 20050831
  - (djm) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2005/08/30 22:08:05
