--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050922
+ - (dtucker) [configure.ac] Use -R linker flag for libedit too; patch from
+   skeleten at shillest.net.
+
 20050919
  - (tim) [aclocal.m4 configure.ac] Delete acconfig.h and add templates to
    AC_DEFINE and AC_DEFINE_UNQUOTED to quiet autoconf 2.59 warning messages.
