--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20050922
  - (dtucker) [configure.ac] Use -R linker flag for libedit too; patch from
    skeleten at shillest.net.
+ - (dtucker) [configure.ac] Fix help for --with-opensc; patch from skeleten at
+   shillest.net.
 
 20050919
  - (tim) [aclocal.m4 configure.ac] Delete acconfig.h and add templates to
