--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050924
+ - (dtucker) [auth2.c] Move start_pam() calls out of if-else block to remove
+   duplicate call.  ok djm@
+
 20050922
  - (dtucker) [configure.ac] Use -R linker flag for libedit too; patch from
    skeleten at shillest.net.
