--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 20050928
  - (dtucker) [entropy.c] Use u_char for receiving RNG seed for consistency.
+ - (dtucker) [auth-pam.c] Bug #1028: send final non-query messages from
+   PAM via keyboard-interactive.  Patch tested by the folks at Vintela.
 
 20050927
  - (dtucker) [entropy.c] Remove unnecessary tests for getuid and geteuid
