--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20050929
+ - (dtucker) [monitor_wrap.c] Remove duplicate definition of loginmsg
+   introduced during sync.
+
 20050928
  - (dtucker) [entropy.c] Use u_char for receiving RNG seed for consistency.
  - (dtucker) [auth-pam.c] Bug #1028: send final non-query messages from
