--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20051005
+ - (dtucker) [configure.ac sshd.8] Enable locked account check (a prepended
+   "*LOCKED*" string) for FreeBSD.  Patch jeremie at le-hen.org and
+   senthilkumar_sen at hotpop.com.
+
 20051003
  - (dtucker) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2005/09/07 08:53:53
