--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20051017
+ - (dtucker) [configure.ac] Bug #1097: Fix configure for cross-compiling.
+   /etc/default/login report and testing from aabaker at iee.org, corrections
+   from tim@.
+
 20051009
  - (dtucker) [configure.ac defines.h openbsd-compat/vis.{c,h}] Sync current
    versions from OpenBSD.  ok djm@
