- (dtucker) [configure.ac] Bug #1104: Tru64's printf family doesn't    understand "%lld", even though the compiler has "long long", so handle    it as a special case.  Patch tested by mcaskill.scott at epa.gov.
(actually was included in previous commit)

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
  - (dtucker) [configure.ac] Relocate LLONG_MAX calculation to after the
    sizeof(long long) checks, to make fixing bug #1104 easier (no changes
    yet).
+ - (dtucker) [configure.ac] Bug #1104: Tru64's printf family doesn't
+   understand "%lld", even though the compiler has "long long", so handle
+   it as a special case.  Patch tested by mcaskill.scott at epa.gov.
 
 20051017
  - (dtucker) [configure.ac] Bug #1097: Fix configure for cross-compiling.
