--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
  - (dtucker) [configure.ac] Bug #1104: Tru64's printf family doesn't
    understand "%lld", even though the compiler has "long long", so handle
    it as a special case.  Patch tested by mcaskill.scott at epa.gov.
+ - (dtucker) [contrib/cygwin/ssh-user-config] Remove duplicate yes/no
+   prompt.  Patch from vinschen at redhat.com.
 
 20051017
  - (dtucker) [configure.ac] Bug #1097: Fix configure for cross-compiling.
