--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20051030
+ - (djm) [contrib/suse/openssh.spec contrib/suse/rc.
+   sshd contrib/suse/sysconfig.ssh] Bug #1106: Updated SuSE spec and init 
+   files from imorgan AT nas.nasa.gov
+
 20051025
  - (dtucker) [configure.ac] Relocate LLONG_MAX calculation to after the
    sizeof(long long) checks, to make fixing bug #1104 easier (no changes
