- (dtucker) [README.platform] Add PAM section.

--- a/ChangeLog
+++ b/ChangeLog
@@ -102,6 +102,7 @@
      [bufaux.c]
      Fix leaks in error paths, bz #1109 and #1110 reported by kremenek AT
      cs.stanford.edu; ok dtucker@
+ - (dtucker) [README.platform] Add PAM section.
 
 20051102
  - (dtucker) [openbsd-compat/bsd-misc.c] Bug #1108: fix broken strdup().
