- (dtucker) [openbsd-compat/getenv.c] Merge changes for __findenv from    OpenBSD getenv.c revs 1.4 - 1.8 (ANSIfication of arguments, removal of    "register").

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20051110
+ - (dtucker) [openbsd-compat/getenv.c] Merge changes for __findenv from
+   OpenBSD getenv.c revs 1.4 - 1.8 (ANSIfication of arguments, removal of
+   "register").
+
 20051105
  - (djm) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2005/10/07 11:13:57
