--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
    after the copyright notices.  Having them at the top next to the CVSIDs
    guarantees a conflict for each and every sync.
  - (dtucker) [openbsd-compat/strlcpy.c] Update from OpenBSD 1.8 -> 1.10.
+ - (dtucker) [openbsd-compat/sigact.h] Add "OPENBSD ORIGINAL" marker.
 
 20051105
  - (djm) OpenBSD CVS Sync
