--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,8 @@
    Removal of rcsid, "whiteout" inode type.
  - (dtucker) [openbsd-compat/basename.c] Update from OpenBSD 1.11 -> 1.14.
    Removal of rcsid, will no longer strlcpy parts of the string.
+ - (dtucker) [openbsd-compat/strtoll.c] Update from OpenBSD 1.4 -> 1.5.
+   Removal of rcsid.
 
 20051105
  - (djm) OpenBSD CVS Sync
