--- a/ChangeLog
+++ b/ChangeLog
@@ -24,7 +24,7 @@
  - (dtucker) [openbsd-compat/basename.c] Update from OpenBSD 1.11 -> 1.14.
    Removal of rcsid, will no longer strlcpy parts of the string.
  - (dtucker) [openbsd-compat/strtoll.c] Update from OpenBSD 1.4 -> 1.5.
-   Removal of rcsid.
+ - (dtucker) [openbsd-compat/strtoul.c] Update from OpenBSD 1.5 -> 1.7.
 
 20051105
  - (djm) OpenBSD CVS Sync
