--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,7 @@
    Removal of rcsid, will no longer strlcpy parts of the string.
  - (dtucker) [openbsd-compat/strtoll.c] Update from OpenBSD 1.4 -> 1.5.
  - (dtucker) [openbsd-compat/strtoul.c] Update from OpenBSD 1.5 -> 1.7.
+ - (dtucker) [openbsd-compat/readpassphrase.c] Update from OpenBSD 1.16 -> 1.18.
 
 20051105
  - (djm) OpenBSD CVS Sync
