--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,7 @@
  - (dtucker) [openbsd-compat/readpassphrase.h] Update from OpenBSD 1.3 -> 1.5.
  - (dtucker) [openbsd-compat/glob.c] Update from OpenBSD 1.22 -> 1.25.
  - (dtucker) [openbsd-compat/glob.h] Update from OpenBSD 1.8 -> 1.9.
+ - (dtucker) [openbsd-compat/getcwd.c] Update from OpenBSD 1.9 -> 1.14.
 
 20051105
  - (djm) OpenBSD CVS Sync
