--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,7 @@
  - (dtucker) [openbsd-compat/getcwd.c] Update from OpenBSD 1.9 -> 1.14.
  - (dtucker) [openbsd-compat/getcwd.c] Replace lstat with fstat to match up
    with OpenBSD code since we don't support platforms without fstat any more.
+ - (dtucker) [openbsd-compat/inet_aton.c] Update from OpenBSD 1.7 -> 1.9.
 
 20051105
  - (djm) OpenBSD CVS Sync
