--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,7 @@
  - (dtucker) [openbsd-compat/strsep.c] Update from OpenBSD 1.5 -> 1.6.
  - (dtucker) [openbsd-compat/daemon.c] Update from OpenBSD 1.10 -> 1.13.
  - (dtucker) [openbsd-compat/mktemp.c] Update from OpenBSD 1.17 -> 1.19.
+ - (dtucker) [openbsd-compat/rresvport.c] Update from OpenBSD 1.6 -> 1.8.
 
 20051105
  - (djm) OpenBSD CVS Sync
