--- a/ChangeLog
+++ b/ChangeLog
@@ -40,6 +40,7 @@
  - (dtucker) [openbsd-compat/daemon.c] Update from OpenBSD 1.10 -> 1.13.
  - (dtucker) [openbsd-compat/mktemp.c] Update from OpenBSD 1.17 -> 1.19.
  - (dtucker) [openbsd-compat/rresvport.c] Update from OpenBSD 1.6 -> 1.8.
+ - (dtucker) [openbsd-compat/bindresvport.c] Add "OPENBSD ORIGINAL" marker.
 
 20051105
  - (djm) OpenBSD CVS Sync
