--- a/ChangeLog
+++ b/ChangeLog
@@ -45,7 +45,7 @@
  - (dtucker) [openbsd-compat/sigact.c] Update from OpenBSD 1.3 -> 1.4.
    Id and copyright sync only, there were no substantial changes we need.
  - (dtucker) [openbsd-compat/bsd-closefrom.c openbsd-compat/base64.c]
-   -Wall fixes from djm.
+   -Wsign-compare fixes from djm.
 
 20051105
  - (djm) OpenBSD CVS Sync
