--- a/ChangeLog
+++ b/ChangeLog
@@ -48,6 +48,8 @@
    -Wsign-compare fixes from djm.
  - (dtucker) [openbsd-compat/sigact.h] Update from OpenBSD 1.2 -> 1.3.
    Id and copyright sync only, there were no substantial changes we need.
+ - (dtucker) [configure.ac] Try to get the gcc version number in a way that
+   doesn't change between versions, and use a safer default.
 
 20051105
  - (djm) OpenBSD CVS Sync
