--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 20051112
  - (dtucker) [openbsd-compat/getrrsetbyname.c] Restore Portable-specific
    ifdef lost during sync.  Spotted by tim@.
- - (dtucker) [openbsd-compat/realpath.c] Sync $OpenBSD tag.
+ - (dtucker) [openbsd-compat/{realpath.c,stroll.c,rresvport.c}] $OpenBSD tag.
 
 20051110
  - (dtucker) [openbsd-compat/setenv.c] Merge changes for __findenv from
