--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
  - (dtucker) [openbsd-compat/getrrsetbyname.c] Restore Portable-specific
    ifdef lost during sync.  Spotted by tim@.
  - (dtucker) [openbsd-compat/{realpath.c,stroll.c,rresvport.c}] $OpenBSD tag.
+ - (dtucker) [configure.ac] Use "$AWK" instead of "awk" in gcc version test.
 
 20051110
  - (dtucker) [openbsd-compat/setenv.c] Merge changes for __findenv from
