--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    ifdef lost during sync.  Spotted by tim@.
  - (dtucker) [openbsd-compat/{realpath.c,stroll.c,rresvport.c}] $OpenBSD tag.
  - (dtucker) [configure.ac] Use "$AWK" instead of "awk" in gcc version test.
+ - (dtucker) [configure.ac] Remove duplicate utimes() check.  ok djm@
 
 20051110
  - (dtucker) [openbsd-compat/setenv.c] Merge changes for __findenv from
