--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20051120
+ - (dtucker) [openbsd-compat/openssl-compat.h] Add comment explaining what
+   is going on.
+
 20051112
  - (dtucker) [openbsd-compat/getrrsetbyname.c] Restore Portable-specific
    ifdef lost during sync.  Spotted by tim@.
