--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    asprintf() implementation, after syncing our {v,}snprintf() implementation
    with some extra fixes from Samba's version. With help and debugging from 
    dtucker and tim; ok dtucker@
+ - (dtucker) [configure.ac] Fix typos in comments and AC_SEARCH_LIB argument
+   order in Reliant Unix block.  Patch from johane at lysator.liu.se.
 
 20051122
  - (dtucker) OpenBSD CVS Sync
