--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    dtucker and tim; ok dtucker@
  - (dtucker) [configure.ac] Fix typos in comments and AC_SEARCH_LIB argument
    order in Reliant Unix block.  Patch from johane at lysator.liu.se.
+ - (dtucker) [regress/test-exec.sh] Use 1024 bit keys since we generate so
+   many and use them only once.  Speeds up testing on older/slower hardware.
 
 20051122
  - (dtucker) OpenBSD CVS Sync
