--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+20051126
+ - (dtucker) [configure.ac] Bug #1126: AIX 5.2 and 5.3 (and presumably newer,
+   when they're available) need the real UID set otherwise pam_chauthtok will
+   set ADMCHG after changing the password, forcing the user to change it
+   again immediately.
+
 20051125
  - (dtucker) [configure.ac] Apply tim's fix for older systems where the
    resolver state in resolv.h is "state" not "__res_state".  With slight
