- (dtucker) [regress/yes-head.sh] Work around breakage caused by some    versions of GNU head.  Based on patch from zappaman at buraphalinux.org

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20051128
+ - (dtucker) [regress/yes-head.sh] Work around breakage caused by some
+   versions of GNU head.  Based on patch from zappaman at buraphalinux.org
+
 20051126
  - (dtucker) [configure.ac] Bug #1126: AIX 5.2 and 5.3 (and presumably newer,
    when they're available) need the real UID set otherwise pam_chauthtok will
