--- a/ChangeLog
+++ b/ChangeLog
@@ -55,6 +55,11 @@
      [channels.c channels.h session.c]
      make sure protocol messages for internal channels are ignored.
      allow adjust messages for non-open channels; with and ok djm@
+ - (djm) [misc.c] Disable tunnel code for non-OpenBSD (for now), enable
+   again by providing a sys_tun_open() function for your platform and 
+   setting the CUSTOM_SYS_TUN_OPEN define. More work is required to match 
+   OpenBSD's tunnel protocol, which prepends the address family to the 
+   packet
 
 20051201
  - (djm) [envpass.sh] Remove regress script that was accidentally committed 
