--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20051217
+ - (dtucker) [defines.h] HP-UX system headers define "YES" and "NO" which
+   scp.c also uses, so undef them here.
+
 20051214
  - (dtucker) OpenBSD CVS Sync (regress/)
    - dtucker@cvs.openbsd.org 2005/12/30 04:36:39
