--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,9 @@
    - jmc@cvs.openbsd.org 2005/12/16 18:08:53
      [ssh.1]
      simplify a sentence;
+   - jmc@cvs.openbsd.org 2005/12/16 18:12:22
+     [ssh.1]
+     make the description of -c a little nicer;
    - jmc@cvs.openbsd.org 2005/12/16 18:14:40
      [ssh.1]
      signpost the protocol sections;
