- (djm) [openbsd-compat/port-tun.c openbsd-compat/port-tun.h configure.ac]    [serverloop.c ssh.c openbsd-compat/Makefile.in]    [openbsd-compat/openbsd-compat.h] Implement tun(4) forwarding    compatability support for Linux, diff from reyk@

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,10 @@
    - stevesk@cvs.openbsd.org 2005/12/31 01:38:45
      [ssh.1]
      document -MM; ok djm@
+ - (djm) [openbsd-compat/port-tun.c openbsd-compat/port-tun.h configure.ac]
+   [serverloop.c ssh.c openbsd-compat/Makefile.in]
+   [openbsd-compat/openbsd-compat.h] Implement tun(4) forwarding 
+   compatability support for Linux, diff from reyk@
 
 20051229
  - (tim) [buildpkg.sh.in] grep for $SSHDUID instead of $SSHDGID on /etc/passwd
