- (djm) [configure.ac] oops, make that linux/if_tun.h

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
    compatability support for Linux, diff from reyk@
  - (djm) [configure.ac] Disable Linux tun(4) compat code if linux/tun.h does
    not exist
+ - (djm) [configure.ac] oops, make that linux/if_tun.h
 
 20051229
  - (tim) [buildpkg.sh.in] grep for $SSHDUID instead of $SSHDGID on /etc/passwd
