--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 20060103
+ - (djm) [channels.c] clean up harmless merge error, from reyk@
+
+20060103
  - (djm) OpenBSD CVS Sync
    - jmc@cvs.openbsd.org 2006/01/02 17:09:49
      [ssh_config.5 sshd_config.5]
