- (tim) [configure.ac] Add AC_REVISION. Add sys/time.h to lastlog.h test    for Solaris. OK dtucker@.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20060205
+ - (tim) [configure.ac] Add AC_REVISION. Add sys/time.h to lastlog.h test
+   for Solaris. OK dtucker@.
+
 20060203
  - (tim) [configure.ac] test for egrep (AC_PROG_EGREP) before first
    AC_CHECK_HEADERS test. Without it, if AC_CHECK_HEADERS is first run
