- (tim) [buildpkg.sh.in] Make the names consistent.    s/pkg_post_make_install_fixes.sh/pkg-post-make-install-fixes.sh/ OK dtucker@

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20060214
+ - (tim) [buildpkg.sh.in] Make the names consistent.
+   s/pkg_post_make_install_fixes.sh/pkg-post-make-install-fixes.sh/ OK dtucker@
+
 20060212
  - (dtucker) [openbsd-compat/bsd-cygwin_util.c] Make loop counter unsigned
    to silence compiler warning, from vinschen at redhat.com.
